<resources>
    <string name="app_name">cukit</string>

    <!-- Strings para: el inicio de sesion -->
    <string name="icorreo">Ingresa tu Correo</string>
    <string name="icontra">Ingresa tu Contraseña</string>
    <string name="IniSec">Iniciar Sesión</string>
    <string name="Registrate">Regístrate</string>
    <string name="AunNo">¿Aún no tengo cuenta? </string>
    <string name="Correo">Correo</string>
    <string name="Contraseña">Contraseña </string>


    <!-- Strings para: Registrarse-->
    <string name="r_Titulo">Regístrate</string>
    <string name="r_Nombre">Nombre</string>
    <string name="r_Correo">Correo</string>
    <string name="r_Contraseña">Contraseña</string>
    <string name="r_YaTengo">¿Ya tienes una cuenta?</string>
    <string name="r_Iniciar">Iniciar sesión</string>
    <string name="r_btn_Registrarse">Registrarse</string>
    <!-- Strings para:-->


    <!-- Strings para: Populares -->
    <string name="tvPopulares">Populares </string>

    <!-- Strings para: VerReceta-->
    <string name="foto_receta">Foto de la receta</string>
    <string name="nombre_receta">Nombre de la receta</string>
    <string name="usuario_receta">Nombre de usuario</string>
    <string name="tiempo_receta">40 minutos</string>
    <string name="ingredientes_receta">Ingredientes</string>
    <string name="pasos_receta">Pasos</string>
    <string name="infoEmpresa">Acerca del equipo</string>

</resources>