<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrate">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:id="@+id/r_tv_titulo"
                    android:layout_width="375dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="30dp"
                    android:layout_weight="0.4"
                    android:fontFamily="sans-serif"
                    android:text="@string/r_Titulo"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="30dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/r_tv_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:background="@color/white"
                android:text="@string/r_Nombre"
                android:textAlignment="textStart" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/borde"
                android:orientation="horizontal"
                android:padding="12dp">

                <EditText
                    android:id="@+id/r_edt_nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint = "Ingresa tu Nombre"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/r_tv_correo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:text="@string/r_Correo"
                android:textAlignment="textStart" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/borde"
                android:orientation="horizontal"
                android:padding="12dp">

                <EditText
                    android:id="@+id/r_ed_correo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint = "Ingresa tu Correo"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/r_tv_contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:text="@string/r_Contraseña"
                android:textAlignment="textStart"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/borde"
                android:orientation="horizontal"
                android:padding="12dp">

                <EditText
                    android:id="@+id/r_ed_contraseña"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint = "Ingresa tu Contraseña"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/r_tv_yaTengo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/r_YaTengo"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/r_tv_iniciarSesion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/r_Iniciar"
                    android:textColor="@color/verdeapp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/r_btn_Registrarse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/verdeapp"
                    android:elevation="200dp"
                    android:onClick="irAInicio"
                    android:text="@string/r_btn_Registrarse"
                    android:translationZ="200dp"
                    app:cornerRadius="100dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>