<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows = "true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".VerReceta">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivReceta"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:contentDescription="@string/foto_receta"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/comida3" />

                <TextView
                    android:id="@+id/tvNombreReceta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="25dp"
                    android:paddingHorizontal="16dp"
                    android:text="@string/nombre_receta"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/image2" />

                    <TextView
                        android:id="@+id/tvUsuarioReceta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="16dp"
                        android:drawablePadding="7dp"
                        android:text="@string/usuario_receta"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        app:drawableStartCompat="@drawable/baseline_person_outline_18"
                        app:drawableTint="?android:attr/textColorHint" />
                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dividerInsetStart="16dp"
                    app:dividerInsetEnd="16dp"
                    android:layout_marginVertical="25dp" />

                <TextView
                    android:id="@+id/tvTiempoReceta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="35dp"
                    android:drawablePadding="7dp"
                    android:text="@string/tiempo_receta"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:drawableStartCompat="@drawable/baseline_access_time_18"
                    app:drawableTint="?android:attr/textColorHint"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/tvIngredientesReceta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:text="@string/ingredientes_receta"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <!-- Aqui van los ingredientes -->
                <ListView
                    android:id="@+id/lvIngredientesReceta"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dividerInsetStart="16dp"
                    app:dividerInsetEnd="16dp"
                    android:layout_marginVertical="25dp" />

                <TextView
                    android:id="@+id/tvPasosReceta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:text="@string/pasos_receta"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <!-- Aqui van los pasos -->
                <ListView
                    android:id="@+id/lvPasosReceta"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#fff"
        app:menu="@menu/menu"
        app:headerLayout="@layout/nav_header"
        android:fitsSystemWindows = "true"
        android:layout_gravity="start">

        <!-- Opciones de menú aquí -->

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>


